<resources>
    <string name="app_name">Inventory App</string>

    <string name="details">Details</string>

    <string name="new_product">Add a product</string>

    <string name="empty_view_text">Get started by adding a product</string>

    <!-- Label for overflow menu option that inserts fake product data into the app [CHAR LIMIT=20] -->
    <string name="action_insert_dummy_data">Insert Dummy Data</string>

    <!-- Label for overflow menu option that deletes all products data in the app [CHAR LIMIT=20] -->
    <string name="action_delete_all_entries">Delete All Products</string>

    <!-- Label for overflow menu option that deletes all products data in the app [CHAR LIMIT=20] -->
    <string name="action_delete">Delete</string>

    <!-- Label for overflow menu option that deletes all products data in the app [CHAR LIMIT=20] -->
    <string name="action_order">Order</string>

    <!-- Dialog message to ask the user to confirm deleting the current product [CHAR LIMIT=NONE] -->
    <string name="delete_dialog_msg">Delete this product?</string>

    <!-- Dialog button text for the option to confirm deleting the current product [CHAR LIMIT=20] -->
    <string name="delete">Delete</string>

    <!-- Dialog button text for the option to cancel deletion of the current product [CHAR LIMIT=20] -->
    <string name="cancel">Cancel</string>

    <!-- Label for details menu option to save product and leave editor [CHAR LIMIT=20] -->
    <string name="action_save">Save</string>

    <!-- Title for the activity to add a new product [CHAR LIMIT=20] -->
    <string name="editor_activity_title_new_product">Add a Product</string>

    <!-- Title for the activity to edit a product [CHAR LIMIT=20] -->
    <string name="editor_activity_title_edit_product">Edit Product</string>

    <!-- Toast message in editor when current product was successfully deleted [CHAR LIMIT=NONE] -->
    <string name="editor_delete_product_successful">Product deleted</string>

    <!-- Toast message in editor when current product has failed to be deleted [CHAR LIMIT=NONE] -->
    <string name="editor_delete_product_failed">Error with deleting product</string>

    <!-- Toast message in editor when current product was successfully updated [CHAR LIMIT=NONE] -->
    <string name="editor_update_product_successful">Product updated</string>

    <!-- Toast message in editor when new product has been successfully inserted [CHAR LIMIT=NONE] -->
    <string name="editor_insert_product_successful">Product saved</string>

    <!-- Toast message in editor when new product has failed to be inserted [CHAR LIMIT=NONE] -->
    <string name="editor_insert_product_failed">Error with saving product</string>

    <!-- Toast message in editor when current product has failed to be updated [CHAR LIMIT=NONE] -->
    <string name="editor_update_product_failed">Error with updating product</string>

    <!-- Dialog message when user is leaving editor but hasn't saved changes [CHAR LIMIT=NONE] -->
    <string name="unsaved_changes_dialog_msg">Discard your changes and quit editing?</string>

    <!-- Dialog button text for the option to discard a user's changes [CHAR LIMIT=20] -->
    <string name="discard">Discard</string>

    <!-- Dialog button text for the option to keep editing the current product [CHAR LIMIT=20] -->
    <string name="keep_editing">Keep Editing</string>

    <string name="product_name">Product Name</string>

    <string name="quantity">Quantity:\ </string>

    <string name="add_quantity">Add Quantity:\ </string>

    <string name="price">Price:\ </string>

    <!-- Label for overview category of attributes in the editor [CHAR LIMIT=30] -->
    <string name="category_overview">Overview</string>

    <!-- Label for section information in the editor [CHAR LIMIT=30] -->
    <string name="section">Section</string>

    <!-- Text hint for name field in the editor [CHAR LIMIT=30] -->
    <string name="hint_product_name">Name</string>

    <!-- Text hint for quantity field in the editor [CHAR LIMIT=30] -->
    <string name="hint_product_quantity">Quantity</string>

    <!-- Text hint for price field in the editor [CHAR LIMIT=30] -->
    <string name="hint_product_price">Price</string>

    <!-- Text hint for supplier name field in the editor [CHAR LIMIT=30] -->
    <string name="hint_supplier_name">Supplier Name</string>

    <!-- Text hint for supplier email field in the editor [CHAR LIMIT=30] -->
    <string name="hint_supplier_email">Supplier E-mail</string>

    <!-- Units for products currency (dolars) [CHAR LIMIT=5] -->
    <string name="unit_product_currency">$</string>

    <!-- Label for dropdown menu option if the product's section is unknown [CHAR LIMIT=20] -->
    <string name="section_unknown">Unknown</string>

    <!-- Label for dropdown menu option if the section is 'makeup' [CHAR LIMIT=20] -->
    <string name="section_makeup">Make-up</string>

    <!-- Label for dropdown menu option if the section is 'skincare' [CHAR LIMIT=20] -->
    <string name="section_skincare">Skincare</string>

    <!-- Label for dropdown menu option if the section is 'hair' [CHAR LIMIT=20] -->
    <string name="section_hair">Hair</string>

    <!-- Text for order email subject -->
    <string name="email_subject">New order for Shop</string>

    <!-- Text for order email body -->
    <string name="email_body">Hello, \n\nI would like to order \ </string>

    <!-- Text for order email signature -->
    <string name="email_signature">\n\nBest Regards, \nShop Crew</string>

    <string name="values_missing">Values are missing. Please check all fields.</string>

    <string name="quantity_run_out">\  quantity: 0. Order on Details page.</string>

    <string name="button_add_photo">Add photo</string>

    <string name="button_plus">+</string>

    <string name="button_minus">-</string>

    <string name="default_add_quantity">1</string>

    <string name="button_sale">Sale</string>
</resources>
