<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/activity_margin"
    tools:context=".DetailsActivity">

    <!-- Overview category -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <!-- Label -->
        <TextView
            android:text="@string/category_overview"
            style="@style/CategoryStyle" />

        <!-- Input fields -->
        <LinearLayout
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:layout_weight="2"
            android:paddingLeft="4dp"
            android:orientation="vertical">

            <!-- Name field -->
            <EditText
                android:id="@+id/edit_product_name"
                android:hint="@string/hint_product_name"
                android:inputType="textCapWords"
                style="@style/EditorFieldStyle" />

            <!-- Quantity field -->
            <EditText
                android:id="@+id/edit_product_quantity"
                android:hint="@string/hint_product_quantity"
                android:inputType="textCapWords"
                style="@style/EditorFieldStyle" />

            <!-- Price field -->
            <EditText
                android:id="@+id/edit_product_price"
                android:hint="@string/hint_product_price"
                android:inputType="textCapWords"
                style="@style/EditorFieldStyle" />

            <!-- Supplier name field -->
            <EditText
                android:id="@+id/edit_product_supplier_name"
                android:hint="@string/hint_supplier_name"
                android:inputType="textCapWords"
                style="@style/EditorFieldStyle" />

            <!-- Supplier email field -->
            <EditText
                android:id="@+id/edit_product_supplier_email"
                android:hint="@string/hint_supplier_email"
                android:inputType="textCapWords"
                style="@style/EditorFieldStyle" />
        </LinearLayout>
    </LinearLayout>

    <!-- Section category -->
    <LinearLayout
        android:id="@+id/container_section"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <!-- Label -->
        <TextView
            android:text="@string/section"
            style="@style/CategoryStyle" />

        <!-- Input field -->
        <LinearLayout
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:layout_weight="2"
            android:orientation="vertical">

            <!-- Gender drop-down spinner -->
            <Spinner
                android:id="@+id/spinner_section"
                android:layout_height="48dp"
                android:layout_width="wrap_content"
                android:paddingRight="16dp"
                android:spinnerMode="dropdown"/>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>
