<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EditorActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/activity_margin"
        tools:context=".EditorActivity">

        <!-- Overview category -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <!-- Label -->
            <TextView
                style="@style/CategoryStyle"
                android:text="@string/category_overview" />

            <!-- Input fields -->
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:orientation="vertical"
                android:paddingLeft="4dp">

                <!-- Name field -->
                <EditText
                    android:id="@+id/edit_product_name"
                    style="@style/EditorFieldStyle"
                    android:hint="@string/hint_product_name"
                    android:inputType="textCapWords" />

                <!-- Quantity field -->
                <EditText
                    android:id="@+id/edit_product_quantity"
                    style="@style/EditorFieldStyle"
                    android:hint="@string/hint_product_quantity"
                    android:inputType="number" />

                <!-- Price field -->
                <EditText
                    android:id="@+id/edit_product_price"
                    style="@style/EditorFieldStyle"
                    android:hint="@string/hint_product_price"
                    android:inputType="numberDecimal" />

                <!-- Supplier name field -->
                <EditText
                    android:id="@+id/edit_product_supplier_name"
                    style="@style/EditorFieldStyle"
                    android:hint="@string/hint_supplier_name"
                    android:inputType="textCapWords" />

                <!-- Supplier email field -->
                <EditText
                    android:id="@+id/edit_product_supplier_email"
                    style="@style/EditorFieldStyle"
                    android:hint="@string/hint_supplier_email"
                    android:inputType="textEmailAddress" />
            </LinearLayout>
        </LinearLayout>

        <!-- Section category -->
        <LinearLayout
            android:id="@+id/container_section"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <!-- Label -->
            <TextView
                style="@style/CategoryStyle"
                android:text="@string/section" />

            <!-- Input field -->
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:orientation="vertical">

                <!-- Section drop-down spinner -->
                <Spinner
                    android:id="@+id/spinner_section"
                    style="@style/Spinner" />
            </LinearLayout>
        </LinearLayout>

        <!-- Quantity category -->
        <LinearLayout
            android:id="@+id/quantity_section"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <!-- Label -->
            <TextView
                style="@style/CategoryStyle"
                android:text="@string/add_quantity" />

            <!-- Input field -->
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:orientation="vertical">

                <!-- Add Quantity field -->
                <EditText
                    android:id="@+id/edit_product_change_quantity"
                    style="@style/EditorFieldStyle"
                    android:inputType="number" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/button_increase_quantity"
                        android:text="@string/button_plus"
                        style="@style/ButtonIncrease" />

                    <Button
                        android:id="@+id/button_decrease_quantity"
                        android:text="@string/button_minus"
                        style="@style/ButtonDecrease" />
                </LinearLayout>

            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingTop="10dp">

            <ImageView
                android:id="@+id/imageview"
                android:layout_width="0dp"
                android:layout_height="80dp"
                android:layout_weight="1" />

            <Button
                android:id="@+id/button_add_photo"
                style="@style/ButtonAddPhoto"
                android:text="@string/button_add_photo" />
        </LinearLayout>
    </LinearLayout>
</ScrollView>