<?xml version="1.0" encoding="utf-8"?><!-- Layout for a single list item in the list of products -->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:padding="@dimen/activity_margin">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical">

        <TextView
            android:id="@+id/name"
            tools:text="@string/product_name"
            style="@style/TextviewProductName" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:text="@string/quantity"
                style="@style/TextViewQuantityPrice" />

            <TextView
                android:id="@+id/quantity"
                style="@style/TextViewQuantityPrice"
                tools:text="0" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                style="@style/TextViewQuantityPrice"
                android:text="@string/price"
                 />

            <TextView
                android:id="@+id/price"
                style="@style/TextViewQuantityPrice"
                tools:text="0.00" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/list_item_imageview"
            style="@style/ListitemImageview" />

        <Button
            android:id="@+id/list_item_button_sale"
            android:text="@string/button_sale"
            style="@style/ButtonSale" />
    </LinearLayout>
</LinearLayout>